--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -8,6 +8,7 @@
     z-index: 1;
     color: var(--white-color, #F5F2F0);
     /* font-size: 100% !important; */
+    margin-top: 70px;
 }
 
 .hero-container .hero-content{
