--- a/src/components/ImageSlider/ImageSlider.css
+++ b/src/components/ImageSlider/ImageSlider.css
@@ -9,12 +9,13 @@
 
 :root {
     --primary: #ffbe81;
-    --white: #ffffff;
+    /* --white: #ffffff; */
+    --white: #d0cece;
     --bg: #FFF5EB;
 }
 
 html {
-    font-size: 62.5%;
+    /* font-size: 62.5%; */
     scroll-behavior: smooth;
 }
 
@@ -37,7 +38,7 @@ html {
 }
 
 ::-webkit-scrollbar {
-    width: 1.3rem;
+    width: 0.5rem;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -54,14 +55,16 @@ html {
     background: #f9f9f9;
 }
 
-body {
+/* body {
     font-size: 1.6rem;
     background: var(--bg);
-}
+} */
 
 .container {
     max-width: 130rem;
-    padding: 4rem 1rem;
+    /* width: 85%; */
+    /* padding: 4rem 1rem; */
+    padding: 3rem 1rem 1rem 1rem;
     margin: 0 auto;
     height: 100%;
     /* font-size: 62.5% !important; */
@@ -90,20 +93,24 @@ body {
 }
 
 .swiper_container {
-    height: 52rem;
+    /* height: 52rem; */
+    height: 40rem;
     padding: 2rem 0;
     position: relative;
 }
 
 .swiper-slide {
-    width: 37rem !important;
-    height: 42rem;
+    /* width: 37rem !important; */
+    width: 28rem !important;
+    /* height: 42rem; */
+    height: 35rem;
     position: relative;
 }
 
 @media (max-width: 500px) {
     .swiper_container {
-        height: 47rem;
+        height: 41rem;
+        
     }
 
     .swiper-slide {
@@ -114,12 +121,15 @@ body {
     .swiper-slide img {
         width: 28rem !important;
         height: 36rem !important;
+        border-radius: 1rem !important;
     }
 }
 
 .swiper-slide img {
-    width: 37rem;
-    height: 42rem;
+    /* width: 37rem; */
+    width: 28rem;
+    /* height: 42rem; */
+    height: 35rem;
     border-radius: 2rem;
     object-fit: cover;
 }
@@ -172,8 +182,8 @@ body {
 
 .slider-controler .slider-arrow {
     background: var(--white);
-    width: 3.5rem;
-    height: 3.5rem;
+    width: 2.5rem;
+    height: 2.5rem;
     border-radius: 50%;
     left: 42%;
     transform: translateX(-42%);
@@ -181,7 +191,7 @@ body {
 }
 
 .slider-controler .slider-arrow ion-icon {
-    font-size: 2rem;
+    font-size: 1.7rem;
     color: #222224;
 }
 
@@ -191,8 +201,8 @@ body {
 
 .swiper-pagination {
     position: relative;
-    width: 15rem !important;
-    bottom: 1rem;
+    width: 10rem !important;
+    bottom: 2rem;
 }
 
 .swiper-pagination .swiper-pagination-bullet {
@@ -209,7 +219,7 @@ body {
 .swiper-pagination-custom,
 .swiper-horizontal>.swiper-pagination-bullets,
 .swiper-pagination-bullets.swiper-pagination-horizontal {
-    bottom: var(--swiper-pagination-bottom, -6px) !important;
+    bottom: var(--swiper-pagination-bottom, -9px) !important;
     left: auto !important;
 }
 
@@ -223,4 +233,25 @@ body {
     .heading-sub-title {
         font-size: 16px;
     }
+}
+
+
+.fullscreen-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 9999;
+    cursor: pointer;
+}
+
+.full-screen-img {
+    max-width: 90%;
+    max-height: 90%;
+    object-fit: contain;
 }
