--- a/src/components/AboutWelcome/AboutWelcome.css
+++ b/src/components/AboutWelcome/AboutWelcome.css
@@ -1,6 +1,7 @@
 .about-header-container img {
     width: 100%;
     height: 473px;
+    margin-top: 70px;
 }
 
 @media screen and (max-width: 798px) {
