--- a/src/components/Mission/Mission.css
+++ b/src/components/Mission/Mission.css
@@ -1,18 +1,16 @@
 .mission-container {
   position: relative;
-  height: 657.75px;
+  height: 689px;
 }
 
 .mission-container .img-container {
   position: absolute;
-  /* width: 100%;
-  height: 100%; */
+  width: 100%;
+  height: 100%;
   z-index: -1;
+  overflow: hidden;
 }
 
-.mission-container .img-container img{
-  max-width: 100%;
-}
 
 .mission-container .content-container {
   position: absolute;
@@ -24,7 +22,7 @@
   flex-direction: column;
   align-items: start;
   padding-top: 30px;
-  padding-left: 760px;
+  padding-left: 762px;
 }
 
 .mission-container .content-container .title {
@@ -45,7 +43,7 @@
   font-weight: 400;
   line-height: normal;
   margin-bottom: 30px;
-  padding-right: 76px;
+  padding-right: 82px;
 }
 
 @media screen and (max-width: 768px) {
