--- a/src/components/Mission/Mission.css
+++ b/src/components/Mission/Mission.css
@@ -21,8 +21,10 @@
   display: flex;
   flex-direction: column;
   align-items: start;
-  padding-top: 30px;
-  padding-left: 762px;
+  /* padding-top: 20px; */
+  padding-left: 660px;
+  justify-content: center;
+  overflow: hidden;
 }
 
 .mission-container .content-container .title {
@@ -43,7 +45,7 @@
   font-weight: 400;
   line-height: normal;
   margin-bottom: 30px;
-  padding-right: 82px;
+  padding-right: 60px;
 }
 
 @media screen and (max-width: 768px) {
