contact form set

--- a/src/components/ImageSlider/ImageSlider.css
+++ b/src/components/ImageSlider/ImageSlider.css
@@ -89,6 +89,8 @@
     font-weight: 400;
     line-height: normal;
     margin-bottom: 25px;
+    margin-left: 85px;
+    margin-right: 85px;
 }
 
 .swiper_container {
