--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -173,3 +173,9 @@ form .form-control:focus {
   }
 
 }
+
+.container-main form .send p{
+  text-align: center !important;
+  margin-top: 10px;
+  font-weight: 600;
+}
