--- a/src/components/GoToTop/GoToTop.css
+++ b/src/components/GoToTop/GoToTop.css
@@ -43,9 +43,9 @@
     }
 } */
 
-@media screen and (max-width: 480px) {
+/* @media screen and (max-width: 480px) {
     .top-btn {
         right: 0;
-        left: 40%;
+        left: 90%;
     }
-}
+} */
