--- a/src/components/ImageSlider/ImageSlider.css
+++ b/src/components/ImageSlider/ImageSlider.css
@@ -233,6 +233,12 @@
 
     .heading-sub-title {
         font-size: 16px;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .container{
+        padding: 1.5rem 1rem 1rem 1rem;
     }
 }
 
