--- a/src/components/BlogHeader/BlogHeader.css
+++ b/src/components/BlogHeader/BlogHeader.css
@@ -78,7 +78,7 @@
      .blog-header-container .blog-header-text {
          position: absolute;
          top: 40%;
-         left: 35%;
+         left: 25%;
          transform: translate(-50%, -50%);
          display: flex;
          flex-direction: column;
@@ -93,7 +93,7 @@
 
      .blog-header-container .blog-header-text p {
          font-size: 24px;
-         width: 600px;
+         /* width: 600px; */
      }
  }
 
