--- a/src/components/ContactHeader/ContactHeader.css
+++ b/src/components/ContactHeader/ContactHeader.css
@@ -99,9 +99,9 @@
     .contact-header-container .contact-header-text {
         top: 45%;
         left: 42%;
-        width: auto;
+        width: fit-content;
         margin-left: 0px;
-        /* right: -10%; */
+        right: -10%;
     }
 
     .contact-header-container .contact-header-text h1 {
