--- a/src/components/Videos/Videos.css
+++ b/src/components/Videos/Videos.css
@@ -50,26 +50,30 @@
     background-color: #ede6d4;
     padding: 20px;
     margin-top: 70px;
+    display: flex;
+    flex-direction: column;
   }
   
   .videoWrapper {
-    position: relative;
-    padding-bottom: 56.25%; /* 16:9 aspect ratio for responsive video */
+    /* position: relative;
+    padding-bottom: 56.25%; */
     width: 100%;
-    height: 0;
+    height: 550px;
+    margin-bottom: 30px;
   }
   
   .videoWrapper iframe {
-    position: absolute;
+    /* position: absolute;
     top: 0;
-    left: 0;
+    left: 0; */
     width: 100%;
-    height: 70%;
+    height: 100%;
     border: none;
     border-radius: 20px;
   }
   #more-videos-title{
-    margin-top: -220px;
+    /* margin-top: -220px; */
+    margin-top: 10px;
   }
   .more-videos {
     width: 100%;
@@ -114,16 +118,20 @@
       margin-right: 0;
       margin-bottom: 20px;
     }
+    .videoWrapper {
+      height: 230px;
+    }
     .videoWrapper iframe {
-      position: absolute;
+      /* position: absolute;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
       border: none;
-      border-radius: 20px;
+      border-radius: 20px; */
+      height: 230px;
     }
     #more-videos-title{
-      margin-top: 20px;
+      margin-top: 0px;
     }
   }
